--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-     
-    <title></title>
+
+    <title>Test</title>
   </head>
   <body>
-
+Insert text here.
   </body>
 </html>
