--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
+    <meta charset="utf-8">
+    <meta name="description" content="">
 
-    <title>Test</title>
+    <title>Test TEXT Here</title>
   </head>
   <body>
 Insert text here.
