--- a/index.html
+++ b/index.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+<link rel="stylesheet" type="text/css" href="http://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.1/normalize.min.css">
   <head>
     <meta charset="utf-8">
     <meta name="description" content="">
 
-    <title>Test TEXT Here</title>
+    <title>FRAMEWORK</title>
+    <link rel="stylesheet" href="main.css" />
   </head>
   <body>
-Insert text here.
+    <h3>Sample Heading</h3>
+<p>
+  Sample paragraph here.
+</p>
   </body>
 </html>
